--- a/courses/la20/homework/ha06.tex
+++ b/courses/la20/homework/ha06.tex
@@ -24,6 +24,7 @@
 
 \newcommand{\End}{\text{End}}
 \newcommand{\Grad}{\text{Grad}}
+\newcommand{\Mat}{\text{Mat}}
 \newcommand{\Spur}{\text{Spur}}
 
 \author{Karsten Lehmann\\Mat. Nr 4935758}
@@ -147,4 +148,231 @@ jeden Eigenwertes von $\varphi$ mit seiner algebraischen Vielfachheit
     $\dim\qty\big(V) = \sum_{i = 1}^r \dim\qty(V_{\lambda_i}^{\varphi})$''})
   folgt die Behauptung.
 \end{itemize}
+
+\paragraph{Aufgabe 7} Seien $p$ eine Primzahl,
+$\mathbb{F}_p \coloneqq \mathbb{Z}/p$, $V \coloneqq \mathbb{F}_p^3$ und
+\[
+  \varphi \colon V \to V,
+  \begin{pmatrix}x\\y\\z\end{pmatrix} \mapsto
+  \begin{pmatrix}x\\-3z\\y\end{pmatrix}
+\]
+\begin{enumerate}[(i)]
+\item Zeigen Sie, dass $\varphi$ linear ist.
+
+  \subparagraph{Lsg.} Seien $u, v \in V, \lambda \in \mathbb{F}_p$
+  beliebig.
+  Dann ist
+  \begin{flalign*}
+    \varphi\qty\big(u + \lambda \cdot v) &= \begin{pmatrix}
+      u_1 + \lambda \cdot v_1 \\
+      -3 \cdot \qty\big(u_3 + \lambda \cdot v_3) \\
+      u_2 + \lambda \cdot v_2
+    \end{pmatrix} \\
+    \overset{
+      \substack{
+        \text{Distributivität} \\
+        \text{in }\mathbb{F}_p
+      }
+    }&= \begin{pmatrix}
+      u_1 + \lambda \cdot v_1 \\
+      -3 \cdot u_3  + \qty\big(- 3 \cdot \lambda \cdot v_3) \\
+      u_2 + \lambda \cdot v_2
+    \end{pmatrix} \\
+    &= \begin{pmatrix}
+      u_1 \\
+      -3 \cdot u_3 \\
+      u_2
+    \end{pmatrix} + \lambda \cdot \begin{pmatrix}
+      v_1 \\
+      -3 \cdot v_3 \\
+      \cdot v_2
+    \end{pmatrix} \\
+    &= \varphi\qty\big(u) + \lambda \cdot \varphi\qty\big(v)
+  \end{flalign*}
+  Aus Lemma 6.2 der Vorlesung folgt die Behauptung.
+
+\item Bestimmen Sie $\text{Mat}\qty\big(\varphi, \mathcal{E})$ für die
+  Standardbasis $\mathcal{E} = \qty\big(e_1, e_2, e_3)$.
+
+  \subparagraph{Lsg.} Es ist
+  \[
+    \varphi\qty\big(e_1) = \begin{pmatrix}1\\0\\0\end{pmatrix},
+    \varphi\qty\big(e_2) = \begin{pmatrix}0\\0\\1\end{pmatrix}
+    \varphi\qty\big(e_3) = \begin{pmatrix}0\\-3\\0\end{pmatrix}
+  \]
+  Somit ist
+  \[
+    \text{Mat}\qty\big(\varphi, \mathcal{E}) = \begin{pmatrix}
+      1 & 0 & 0 \\
+      0 & 0 & -3 \\
+      0 & 1 & 0 \\
+    \end{pmatrix}
+  \]
+
+\item Bestimmen Sie $f_{\varphi}$.
+
+  \subparagraph{Lsg.} Es ist $f_{\varphi} =
+  \det\qty\big(XI_3 - \text{Mat}\qty\big(\varphi, \mathcal{E}))
+  = \det\begin{pmatrix}
+    X - 1 & 0 & 0 \\
+    0 & X & 3 \\
+    0 & -1 & X \\
+  \end{pmatrix}$.
+
+  Mit Entwicklung der Determinante nach der ersten Spalte folgt
+  \begin{flalign*}
+    f_{\varphi} &= \qty\big(X - 1) \cdot \det \begin{pmatrix}
+      X & 3 \\
+      -1 & X \\
+    \end{pmatrix} \\
+    &= \qty\big(X - 1) \cdot \qty\big(X^2 + 3)
+  \end{flalign*}
+
+\item Bestimmen Sie für $p \in \qty\big{2, 3, 5, 7}$ die Eigenwerte und
+  Eigenräume von $\varphi$.
+
+  \subparagraph{Lsg.} Sei $p = 2$, dann ist
+  \[
+    f_{\varphi} = \qty\big(X - 1)^3
+  \]
+  und $\lambda_{1|2|3} = 1$.
+  Weiter ist $V_{\lambda_{1|2|3}}^{\varphi} = \qty{
+    \begin{pmatrix}0\\1\\1\end{pmatrix} \cdot x +
+    \begin{pmatrix}1\\0\\0\end{pmatrix} \cdot y
+    \:\middle |\:
+    x, y \in \mathbb{F}_2
+  }$.
+
+  Sei $p = 3$, dann ist
+  \[
+    f_{\varphi} = X^2 \cdot \qty\big(X - 1)
+  \]
+  und $\lambda_{1|2} = 0, \lambda_3 = 1$.
+  Weiter ist $V_{\lambda_{1|2}}^{\varphi} = \qty{
+    \begin{pmatrix}0\\0\\1\end{pmatrix} \cdot x
+    \:\middle |\:
+    x \in \mathbb{F}_3
+  }$ und $V_{\lambda_3}^{\varphi} = \qty{
+    \begin{pmatrix}1\\0\\0\end{pmatrix} \cdot x
+    \:\middle |\:
+    x \in \mathbb{F}_3
+  }$.
+
+  Sei $p = 5$, dann ist
+  \[
+    f_{\varphi} = \qty\big(X - 1) \cdot \qty\big(X^2 + 3)
+  \]
+  und $\lambda_1 = 1$.
+  Weiter ist $V_{\lambda_1}^{\varphi} = \qty{
+      \begin{pmatrix}1\\0\\0\end{pmatrix} \cdot x
+      \:\middle |\:
+      x \in \mathbb{F}_5
+  }$.
+
+  Sei schließlich $p = 7$, dann ist
+  \[
+    f_{\varphi} = \qty\big(X - 1) \cdot \qty\big(X - 2) \cdot \qty\big(X - 5)
+  \]
+  und $\lambda_1 = 1, \lambda_2 = 2, \lambda_3 = 5$.
+  Weiter ist $V_{\lambda_1} = \qty{
+    \begin{pmatrix}1\\0\\0\end{pmatrix} \cdot x
+    \:\middle |\:
+    x \in \mathbb{F}_5
+  }$.
+
+  Seien $A = 1 \cdot I_3 - \begin{pmatrix}
+    1 & 0 & 0 \\
+    0 & 0 & -3 \\
+    0 & 1 & 0 \\
+  \end{pmatrix} = \begin{pmatrix}
+    0 & 0 & 0 \\
+    0 & 1 & 3 \\
+    0 & -1 & 1 \\
+  \end{pmatrix}$,
+
+  $B = 2 \cdot I_3 - \begin{pmatrix}
+    1 & 0 & 0 \\
+    0 & 0 & -3 \\
+    0 & 1 & 0 \\
+  \end{pmatrix} = \begin{pmatrix}
+    1 & 0 & 0 \\
+    0 & 2 & 3 \\
+    0 & -1 & 2 \\
+  \end{pmatrix}$ und
+
+  $C = 5 \cdot I_3 - \begin{pmatrix}
+    1 & 0 & 0 \\
+    0 & 0 & -3 \\
+    0 & 1 & 0 \\
+  \end{pmatrix} = \begin{pmatrix}
+    4 & 0 & 0 \\
+    0 & 5 & 3 \\
+    0 & -1 & 5 \\
+  \end{pmatrix}$.
+
+  Es folgen $V_{\lambda_1}^{\varphi} = \qty{
+    \begin{pmatrix}1\\0\\0\end{pmatrix} \cdot x
+    \:\middle |\: x \in \mathbb{F}_7
+  }$, $V_{\lambda_2}^{\varphi} = \qty{
+    \begin{pmatrix}0\\4\\2\end{pmatrix} \cdot x
+    \:\middle |\: x \in \mathbb{F}_7
+  }$ und
+
+  $V_{\lambda_3}^{\varphi} = \qty{
+    \begin{pmatrix}0\\2\\6\end{pmatrix} \cdot x
+    \:\middle |\: x \in \mathbb{F}_7
+  }$.
+
+\item Beweisen oder widerlegen Sie für $p \in \qty\big{2, 3, 5, 7}$, dass
+  $\varphi$ diagonalisierbar ist und bestimmen Sie gegebenenfalls eine Basis
+  $\mathcal{B}$ von $V$, sodass $\Mat\qty\big(\mathcal{B}, \varphi)$ eine
+  Diagonalmatrix ist.
+
+  \subparagraph{Lsg.} Sei $p = 2$, dann ist nach (iv)
+  \[
+    m_{\text{geom}}\qty\big(\varphi, 1) =
+    \dim\qty\big(V_{\lambda_{1|2|3}}^{\varphi}) = 2 \ne
+    3 = m_{\text{alg}}\qty\big(\varphi, 1)
+  \]
+  $\Rightarrow \varphi$ ist in $\mathbb{F}_2$ nicht diagonalisierbar.
+
+  Sei $p = 3$, dann ist nach (iv)
+  \[
+    m_{\text{geom}}\qty\big(\varphi, 0) =
+    \dim\qty\big(V_{\lambda_{1|2}}^{\varphi}) = 1 \ne
+    2 = m_{\text{alg}}\qty\big(\varphi, 0)
+  \]
+  $\Rightarrow \varphi$ ist in $\mathbb{F}_3$ nicht diagonalisierbar.
+
+  Sei $p = 5$, dann ist nach (iv) $\lambda_1 = 1$ der einzige Eigenwert von
+  $\varphi$ und
+  \[
+    m_{\text{geom}}\qty\big(\varphi, 1) =
+    \dim\qty\big(V_{\lambda_{1}}^{\varphi}) = 1 \ne
+    3 = \dim\qty\big(V)
+  \]
+  $\Rightarrow \varphi$ ist in $\mathbb{F}_5$ nicht diagonalisierbar.
+
+  Sei $p = 7$, dann sind nach (iv) $\lambda_1 = 1$, $\lambda_2 = 2$ und
+  $\lambda_3 = 5$ die Eigenwerte von $\varphi$.
+  Da
+  \[
+    \sum_{i = 1}^3
+    m_{\text{geom}}\qty\big(\varphi, \lambda_i) =
+    m_{\text{alg}}\qty\big(\varphi, \lambda_i)
+  \]
+  ist $\varphi$ diagonalisierbar.
+  Sei weiter $\mathcal{B} = \qty(
+    \begin{pmatrix}1\\0\\0\end{pmatrix},
+    \begin{pmatrix}0\\4\\2\end{pmatrix},
+    \begin{pmatrix}0\\2\\6\end{pmatrix}
+  )$, dann ist
+  \[
+    \Mat\qty\big(\varphi, \mathcal{B}) = \begin{pmatrix}
+      1 & 0 & 0 \\
+      0 & 2 & 0 \\
+      0 & 0 & 5 \\
+    \end{pmatrix}
+  \]
+\end{enumerate}
 \end{document}
